@@ -1,5 +1,9 @@
 changelog
 
+=== next
+
++ Try to fix hoot again because Twitter did a Twitter.
+
 === 0.9.8 Tentative Tentacle
 
 + Switch database to WAL mode.
